# FINALES2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dockerfile  flows.md  setup.cfg  setup.py
.docker/: docker-compose.yml
.github/workflows/: PullRequestToMainDevelopment.yml
DockerFiles/: docker-compose.yml  dockerfile
aux/: example_q1m1.json  example_tenant.json
examples/: example_q2m1.json  example_tenant.json
src/FINALES2/: FINALES2\test\filesForTests\session_testing.db  main.py  schemas.py  sql_app.db
src/FINALES2/cli/: __init__.py  database.py  devtest.py  main.py  server.py
src/FINALES2/config/: __init__.py  config.json
src/FINALES2/db/: __init__.py  base.py  base_class.py  session.py  sql_app.db
src/FINALES2/db/tables/: __init__.py  link_quantity_request.py  link_quantity_result.py  quantities.py  requests.py  results.py  status_log_requests.py  status_log_results.py  tenants.py
src/FINALES2/engine/: http_exception_handler.py  limitations_cache.py  main.py  server_manager.py
src/FINALES2/logging/: logger.py
src/FINALES2/quantity_entries/: density_molecularDynamicsSimulation.json  density_vibratingTubeDensimetry.json  rollingBallViscometry.json
src/FINALES2/server/: config.py  endpoints.py  operations.py  schemas.py  server.py
src/FINALES2/tenants/: dummyTenant.py  referenceMethod.py  referenceTenant.py
src/FINALES2/tenants/EOF_tenant/: EOF_tenant_tenant.json  degradation_model.json  eof_tenant.py
src/FINALES2/test/: conftest.py  test_CI_dummy.py  test_dummy.py  test_tenant.py  test_userManager.py  test_user_manager.py
src/FINALES2/test/filesForTests/: session_testing.db  tenant_functionalityTest.py  test_config.py
src/FINALES2/tests/engine/: parse_schema_for_template_test.py  server_manager_test.py
src/FINALES2/userManagement/: authentication.py  userDB.db  userDB2.db  userManager.py
src/FINALES2/user_management/: __init__.py  classes_user_manager.py  user_manager.py
