# According to https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = FINALES2
version = 0.1.0
description = This package provides functionalities of the FINALES server.
long_description = file: README.md
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
    fastapi
    uvicorn
    pre-commit
    sqlalchemy
    sqlalchemy_utils
python_requires = >=3.9

[options.packages.find]
where = src
