# According to https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = FINALES2
version = 0.2.0
description = This package provides functionalities of the FINALES server.
long_description = file: README.md
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
    bcrypt
    click
    fastapi
    jose
    jsonschema
    jsonsubschema
    numpy
    passlib
    pre-commit
    pydantic
    pytest
    python_jose
    python-multipart
    requests
    setuptools
    sqlalchemy
    sqlalchemy_utils
    uvicorn
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    finales = FINALES2.cli.main:finales_cli
